# posix4msvc

./: CMakeLists.txt  README.md
include/: dirent.h  fcntl.h  getopt.h  libgen.h  stdio.h  stdlib.h  stdlib_ex.h  strings.h  termios.h  time.h  unistd.h
include/bsd/: string.h
include/bsd/machine/: ansi.h  bswap.h  endian.h  endian_machdep.h  int_const.h  int_limits.h  int_mwgwtypes.h  int_types.h  types.h  wchar_limits.h
include/sys/: bswap.h  cdefs.h  cdefs_win32.h  common_int_types.h  fd_set.h  featuretest.h  file.h  ioccom.h  ioctl.h  param.h  resource.h  stat_ex.h  stdint.h  syslimits.h  time.h  timespec.h  ttycom.h  ttydefaults.h  types_ex.h
include/sys/arch/i386/: ansi.h  endian.h  endian_machdep.h  int_const.h  int_limits.h  int_mwgwtypes.h  int_types.h  types.h  wchar_limits.h
src/: FILEio.c  _tdirent.c  asprintf.c  chmod.c  direntA.c  dllmain.c  env.c  fcntl.c  flock.c  fsync.c  get_osfhandle-nothrow.c  get_osfhandle-nothrow.h  getopt.c  init.c  init_devblk.c  init_hooking.c  io.c  ioctl.c  libgen.c  link-old.cd  link.c  mkstemp.c  nt_fileio.c  nt_fileio.h  nt_types.h  p4msvc_utils.c  p4msvc_utils.h  posix4msvc.def  readlink.c  resource.c  sleep.c  strdup.c  strlcat.c  strlcpy.c  strsep.c  strtok_r.c  time.c  utils.c  vasprintf-msvc.c  win_devblk.h
src/stdio/: flags.c  fopen.c
